# r2

./: .gitignore  CMakeLists.txt  Makefile.am  R2Config.h  bootstrap.bat  configure.ac  main.h
main/: CMakeLists.txt  R2Config.h.in  main.cpp
main/MathFunctions/: CMakeLists.txt
src/: CMakeLists.txt  main.cxx
src/MathFunctions/: mysqrt.cxx
